Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2217

Some properties are not being highlighted in context sensitive help

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.1
    • Help System
    • None
    • Windows Vista x64
      Qt 4.7.0 rc1
    • 997e2e53481de4d4bda9cfa9d01335d1a1201747

    Description

      Context sensitive help seems to highlight the respective headline of the opened doc page only when the name there is the same as in the code.

      Example:
      F1 on QWidget::hide() opens QWidget's doc page, scrolls to hide() and hightlights it. Well done!
      F1 on nextButton->setEnabled() opens QWidget's doc page, scrolls to enabled but does not highlight anything.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            heimrich Karsten Heimrich
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes