Some properties are not being highlighted in context sensitive help.

This happens because the may have a different name (like it's frament)
which we now look for while parsing the html for the function name.

Task-number: QTCREATORBUG-2217
Reviewed-by: ck